examples/codegen/effects/state.an
effect Use a with
    get: Unit -> a
    set: a -> Unit

use_state (y: I32) =
    x = get () : I32
    set (x + y)
    state = get () : I32
    print "Ending state = ${state}"
    state

state (f: Unit -> a can Use s) (initial: s): a =
    mut state0 = initial
    mut state = !state0
    handle f ()
    | get () -> resume @state
    | set new_state ->
        // Set is inferred incorrectly without this type hint
        state := new_state : s
        resume ()

use_state 10_i32 with state 1
use_state 20_u64 with state 2

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/state.an:1:1
// 0 | effect Use a with
// 1 | effect Use a with	// error: This program has no `main` function
//   | 
// 2 |     get: Unit -> a
// 
// examples/codegen/effects/state.an:2:15
// 1 | effect Use a with
// 2 |     get: Unit -> a	// error: Expected the end of this block but found `->`
//   |               ^^
// 3 |     set: a -> Unit
// 
// examples/codegen/effects/state.an:6:9
// 5 | use_state (y: I32) =
// 6 |     x = get () : I32	// error: `get` not found in scope
//   |         ^^^
// 7 |     set (x + y)
// 
// examples/codegen/effects/state.an:7:5
// 6 |     x = get () : I32
// 7 |     set (x + y)	// error: `set` not found in scope
//   |     ^^^
// 8 |     state = get () : I32
// 
// examples/codegen/effects/state.an:8:13
//  7 |     set (x + y)
//  8 |     state = get () : I32	// error: `get` not found in scope
//    |             ^^^
//  9 |     print "Ending state = ${state}"
// 
// examples/codegen/effects/state.an:9:27
//  8 |     state = get () : I32
//  9 |     print "Ending state = ${state}"	// error: Expected the end of this block but found `${`
//    |                           ^^
// 10 |     state
// 
// examples/codegen/effects/state.an:12:7
//    | // error: Expected `=` to begin the function body but found `(`
// 12 | state (f: Unit -> a can Use s) (initial: s): a =
//    |       ^
// 13 |     mut state0 = initial
// 
// examples/codegen/effects/state.an:22:11
//    | // error: Expected `=` to begin the function body but found `10_I32`
// 22 | use_state 10_i32 with state 1
//    |           ^^^
// 23 | use_state 20_u64 with state 2
// 
// examples/codegen/effects/state.an:23:11
// 22 | use_state 10_i32 with state 1
//    | // error: Expected `=` to begin the function body but found `20_U64`
// 23 | use_state 20_u64 with state 2
//    |           ^^^
// 
// Found 9 errors and 0 warnings

